--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,17 @@
 			<version>${micro.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+			<artifactId>commons-beanutils</artifactId>
+			<version>1.9.3</version>
+		</dependency>
+
 		<!-- Log4J2 -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
