--- a/pom.xml
+++ b/pom.xml
@@ -2,41 +2,41 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>cn.ms.neural</groupId>
-	<artifactId>neural</artifactId>
+	<groupId>cn.ms</groupId>
+	<artifactId>neural-parent</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
+	<packaging>pom</packaging>
 
 	<name>The Micro Service Neural</name>
 	<description>The Micro Service Neural</description>
 
 	<properties>
-		<micro.version>1.0.0-SNAPSHOT</micro.version>
-
 		<log4j2.version>2.7</log4j2.version>
-
 		<junit.version>4.12</junit.version>
 		<easymock.version>3.4</easymock.version>
-	</properties>
+	</properties> 
+
+	<modules>
+		<module>neural</module>
+		<module>neural-ui</module>
+	</modules>
+
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>cn.ms</groupId>
+				<artifactId>neural</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>cn.ms</groupId>
+				<artifactId>neural-ui</artifactId>
+				<version>${project.version}</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<dependencies>
-		<!-- The Micro Core -->
-		<dependency>
-			<groupId>cn.ms</groupId>
-			<artifactId>micro</artifactId>
-			<version>${micro.version}</version>
-		</dependency>
-
-		<dependency>
-			<groupId>redis.clients</groupId>
-			<artifactId>jedis</artifactId>
-			<version>2.9.0</version>
-		</dependency>
-		<dependency>
-			<groupId>commons-beanutils</groupId>
-			<artifactId>commons-beanutils</artifactId>
-			<version>1.9.3</version>
-		</dependency>
-
 		<!-- Log4J2 -->
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
