--- a/neural/pom.xml
+++ b/neural/pom.xml
@@ -21,10 +21,20 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
+
+		<!-- limiter -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
 			<version>${jedis.version}</version>
+			<scope>provided</scope>
+		</dependency>
+
+		<!-- jwt -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.8.4</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
