--- a/neural/pom.xml
+++ b/neural/pom.xml
@@ -13,6 +13,7 @@
 	<properties>
 		<guava.version>20.0</guava.version>
 		<jedis.version>2.9.0</jedis.version>
+		<jackson.version>2.8.4</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -34,7 +35,7 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.8.4</version>
+			<version>${jackson.version}</version>
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
