--- a/pom.xml
+++ b/pom.xml
@@ -14,9 +14,8 @@
 		<jedis.version>2.9.0</jedis.version>
 		<jackson.version>2.8.4</jackson.version>
 
-		<log4j2.version>2.7</log4j2.version>
+		<slf4j.version>1.7.25</slf4j.version>
 		<junit.version>4.12</junit.version>
-		<easymock.version>3.4</easymock.version>
 	</properties>
 
 	<dependencies>
@@ -25,8 +24,13 @@
 			<artifactId>guava</artifactId>
 			<version>${guava.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
 
-		<!-- limiter -->
+		<!-- Limiter -->
 		<dependency>
 			<groupId>redis.clients</groupId>
 			<artifactId>jedis</artifactId>
@@ -34,7 +38,7 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- jwt -->
+		<!-- JWT -->
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
@@ -42,29 +46,11 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Log4J2 -->
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>${log4j2.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${log4j2.version}</version>
-		</dependency>
-
 		<!-- Test -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-			<version>${easymock.version}</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
