--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
 
 	<properties>
 		<guava.version>20.0</guava.version>
+		<snakeyaml.version>1.18</snakeyaml.version>
+		<slf4j.version>1.7.25</slf4j.version>
+
 		<jedis.version>2.9.0</jedis.version>
 		<jackson.version>2.8.4</jackson.version>
 
-		<slf4j.version>1.7.25</slf4j.version>
 		<junit.version>4.12</junit.version>
 	</properties>
 
@@ -25,9 +27,19 @@
 			<version>${guava.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.yaml</groupId>
+			<artifactId>snakeyaml</artifactId>
+			<version>${snakeyaml.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>ro.fortsoft.pf4j</groupId>
+			<artifactId>pf4j</artifactId>
+			<version>1.3.0</version>
 		</dependency>
 
 		<!-- Limiter -->
