--- a/core/pom.xml
+++ b/core/pom.xml
@@ -11,6 +11,7 @@
     </parent>
 
     <artifactId>core</artifactId>
+    <packaging>jar</packaging>
 
     <properties>
         <guava.version>21.0</guava.version>
@@ -54,12 +55,6 @@
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
             <scope>provided</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>io.reactivex.rxjava2</groupId>
-            <artifactId>rxjava</artifactId>
-            <version>2.1.7</version>
         </dependency>
 
         <!-- JWT -->
