--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>cn.ms.neural</groupId>
+    <groupId>org.ms.neural</groupId>
     <artifactId>parent</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
@@ -18,12 +18,12 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>cn.ms.neural</groupId>
+                <groupId>org.ms.neural</groupId>
                 <artifactId>core</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
-                <groupId>cn.ms.neural</groupId>
+                <groupId>org.ms.neural</groupId>
                 <artifactId>admin</artifactId>
                 <version>${project.version}</version>
             </dependency>
