--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -12,11 +12,20 @@
 
     <artifactId>admin</artifactId>
 
+    <properties>
+        <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>1.5.9.RELEASE</version>
+            <version>${spring-boot.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <version>${spring-boot.version}</version>
         </dependency>
     </dependencies>
 
