--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>1.0.0-SNAPSHOT</version>
 
     <packaging>pom</packaging>
-    <name>The Micro Service Neural</name>
+    <name>parent</name>
     <description>The Micro Service Neural, the focus on solving distributed governance.</description>
 
     <modules>
