--- a/admin/src/main/resources/application.yml
+++ b/admin/src/main/resources/application.yml
@@ -1,3 +1,10 @@
+server:
+  port: 1024
+  context-path: /
+
 spring:
   thymeleaf:
     prefix: classpath:/templates/
+    mode: HTML5
+    encoding: UTF-8
+    content-type: text/html
