--- a/admin/pom.xml
+++ b/admin/pom.xml
@@ -13,10 +13,15 @@
     <artifactId>admin</artifactId>
 
     <properties>
+        <lombok.version>1.16.16</lombok.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>org.ms.neural</groupId>
+            <artifactId>core</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -36,7 +41,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.16.16</version>
+            <version>${lombok.version}</version>
         </dependency>
     </dependencies>
 
